# 3drenderer

./: .gitignore  CMakeLists.txt  README.md  conan-profile.clang.txt  conanfile.py  conanfile.txt
assets/: lenin.mtl
src/: array.c  array.h  display.c  display.h  main.c  mesh.c  mesh.h  triangle.h  vector.c  vector.h
